# Wb-Feedbacks

./: .env_example  .gitignore  README.md  main.py  products.xlsx  pyproject.toml
src/: config.py  feedbacks.py  sku_reader.py
